--- a/Exercises/Exercises.csproj
+++ b/Exercises/Exercises.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{C9EEF5EC-2DD7-4FB4-A779-C98DCBECFB2F}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Exercitiul1</RootNamespace>
-    <AssemblyName>Exercitiul1</AssemblyName>
+    <RootNamespace>Exercises</RootNamespace>
+    <AssemblyName>Exercises</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -45,9 +45,12 @@
   <ItemGroup>
     <Compile Include="LeapYearCalculator.cs" />
     <Compile Include="MathOperations.cs" />
+    <Compile Include="PersonModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GreetingHelper.cs" />
+    <Compile Include="ReferenceTypeOperations.cs" />
+    <Compile Include="ValueTypeOperations.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
