Updated gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 
 /Exercises/obj/Debug
 /.vs/SeleniumAutomation/v16
+/UnitTesting/bin/Debug
+/UnitTesting/obj/Debug
+/packages
+/Exercises/bin/Debug
