--- a/Exercises/Exercises.csproj
+++ b/Exercises/Exercises.csproj
@@ -50,6 +50,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GreetingHelper.cs" />
     <Compile Include="ReferenceTypeOperations.cs" />
+    <Compile Include="SortListHelper.cs" />
+    <Compile Include="StudentsList.cs" />
     <Compile Include="ValueTypeOperations.cs" />
   </ItemGroup>
   <ItemGroup>
