refactorizare + adaugat tema ca unit test

--- a/UnitTesting/Tests.csproj
+++ b/UnitTesting/Tests.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="HomeworkWeek1.cs" />
     <Compile Include="HomeworkWeek2.cs" />
+    <Compile Include="HomeworkWeek3.cs" />
     <Compile Include="Week1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
