--- a/Exercises/Exercises.csproj
+++ b/Exercises/Exercises.csproj
@@ -43,19 +43,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LeapYearCalculator.cs" />
-    <Compile Include="MathOperations.cs" />
-    <Compile Include="PersonModel.cs" />
+    <Compile Include="SessionExcercises\Week1\LeapYearCalculator.cs" />
+    <Compile Include="SessionExcercises\Week1\MathOperations.cs" />
+    <Compile Include="Models\PersonModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="GreetingHelper.cs" />
-    <Compile Include="ReferenceTypeOperations.cs" />
-    <Compile Include="SortListHelper.cs" />
-    <Compile Include="StudentsList.cs" />
-    <Compile Include="ValueTypeOperations.cs" />
+    <Compile Include="SessionExcercises\Week1\GreetingHelper.cs" />
+    <Compile Include="SessionExcercises\Week2\ReferenceTypeOperations.cs" />
+    <Compile Include="SessionExcercises\Week3\SortListHelper.cs" />
+    <Compile Include="SessionExcercises\Week3\StudentsList.cs" />
+    <Compile Include="SessionExcercises\Week2\ValueTypeOperations.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
