--- a/Exercises/Exercises.csproj
+++ b/Exercises/Exercises.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\StudentsModel.cs" />
+    <Compile Include="Models\StudentModel.cs" />
     <Compile Include="Services\StudentServices.cs" />
     <Compile Include="SessionExcercises\Week1\LeapYearCalculator.cs" />
     <Compile Include="SessionExcercises\Week1\MathOperations.cs" />
