--- a/UnitTesting/Tests.csproj
+++ b/UnitTesting/Tests.csproj
@@ -54,6 +54,7 @@
     <Compile Include="HomeworkWeek3.cs" />
     <Compile Include="Week1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Week4.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Exercises\Exercises.csproj">
