--- a/Exercises/Exercises.csproj
+++ b/Exercises/Exercises.csproj
@@ -45,8 +45,10 @@
   <ItemGroup>
     <Compile Include="Models\CourseModel.cs" />
     <Compile Include="Models\StudentModel.cs" />
+    <Compile Include="Models\TeacherModel.cs" />
     <Compile Include="Services\CourseService.cs" />
     <Compile Include="Services\StudentServices.cs" />
+    <Compile Include="Services\TeacherService.cs" />
     <Compile Include="SessionExcercises\Week1\LeapYearCalculator.cs" />
     <Compile Include="SessionExcercises\Week1\MathOperations.cs" />
     <Compile Include="Models\PersonModel.cs" />
