--- a/UnitTesting/Tests.csproj
+++ b/UnitTesting/Tests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="HomeworkWeek2.cs" />
     <Compile Include="HomeworkWeek3.cs" />
     <Compile Include="HomeworkWeek4.cs" />
+    <Compile Include="HomeworkWeek5.cs" />
     <Compile Include="Week1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Week4.cs" />
