--- a/Exercises/Exercises.csproj
+++ b/Exercises/Exercises.csproj
@@ -43,7 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\QuizData.cs" />
+    <Compile Include="Models\AnswerModel.cs" />
     <Compile Include="Models\CourseModel.cs" />
+    <Compile Include="Models\QuestionModel.cs" />
+    <Compile Include="Models\QuizModel.cs" />
     <Compile Include="Models\StudentModel.cs" />
     <Compile Include="Models\TeacherModel.cs" />
     <Compile Include="Services\CourseService.cs" />
