--- a/UnitTesting/Tests.csproj
+++ b/UnitTesting/Tests.csproj
@@ -47,17 +47,25 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="WebDriver, Version=3.141.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selenium.WebDriver.3.141.0\lib\net45\WebDriver.dll</HintPath>
+    </Reference>
+    <Reference Include="WebDriver.Support, Version=3.141.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selenium.Support.3.141.0\lib\net45\WebDriver.Support.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HomeworkWeek1.cs" />
-    <Compile Include="HomeworkWeek2.cs" />
-    <Compile Include="HomeworkWeek3.cs" />
-    <Compile Include="HomeworkWeek4.cs" />
-    <Compile Include="HomeworkWeek5.cs" />
-    <Compile Include="HomeworkWeek6.cs" />
-    <Compile Include="Week1.cs" />
+    <Compile Include="seleniumTests\LoginTest.cs" />
+    <Compile Include="unitTests\HomeworkWeek1.cs" />
+    <Compile Include="unitTests\HomeworkWeek2.cs" />
+    <Compile Include="unitTests\HomeworkWeek3.cs" />
+    <Compile Include="unitTests\HomeworkWeek4.cs" />
+    <Compile Include="unitTests\HomeworkWeek5.cs" />
+    <Compile Include="unitTests\HomeworkWeek6.cs" />
+    <Compile Include="unitTests\Week1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Week4.cs" />
+    <Compile Include="unitTests\Week4.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Exercises\Exercises.csproj">
@@ -76,6 +84,8 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\MSTest.TestAdapter.2.0.0\build\net45\MSTest.TestAdapter.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\MSTest.TestAdapter.2.0.0\build\net45\MSTest.TestAdapter.props'))" />
     <Error Condition="!Exists('..\packages\MSTest.TestAdapter.2.0.0\build\net45\MSTest.TestAdapter.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\MSTest.TestAdapter.2.0.0\build\net45\MSTest.TestAdapter.targets'))" />
+    <Error Condition="!Exists('..\packages\Selenium.WebDriver.ChromeDriver.79.0.3945.3600\build\Selenium.WebDriver.ChromeDriver.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Selenium.WebDriver.ChromeDriver.79.0.3945.3600\build\Selenium.WebDriver.ChromeDriver.targets'))" />
   </Target>
   <Import Project="..\packages\MSTest.TestAdapter.2.0.0\build\net45\MSTest.TestAdapter.targets" Condition="Exists('..\packages\MSTest.TestAdapter.2.0.0\build\net45\MSTest.TestAdapter.targets')" />
+  <Import Project="..\packages\Selenium.WebDriver.ChromeDriver.79.0.3945.3600\build\Selenium.WebDriver.ChromeDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.ChromeDriver.79.0.3945.3600\build\Selenium.WebDriver.ChromeDriver.targets')" />
 </Project>
