--- a/Exercises/Exercises.csproj
+++ b/Exercises/Exercises.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\QuizData.cs" />
+    <Compile Include="Helpers\EncryptDecryptHelper.cs" />
     <Compile Include="Models\AnswerModel.cs" />
     <Compile Include="Models\CourseModel.cs" />
     <Compile Include="Models\QuestionModel.cs" />
